# writeforme

./: .gitignore  .pylintrc  LICENSE
.github/workflows/: ci.yml  node.js.yml
backend/: .pre-commit-config.yaml  .pylintrc  Dockerfile  pyproject.toml
backend/src/app/: .env.example  main.py
backend/src/app/api/: api.py  deps.py
backend/src/app/api/endpoints/: auth.py  model.py  poems.py  user.py
backend/src/app/api/schemas/: auth.py  common.py  model.py  poems.py  user.py
backend/src/app/hexagon/domain/: poem.py  rhyming_scheme.py  user.py
backend/src/app/hexagon/ports/: model_service.py  poem_repository.py  poem_service.py  user_repository.py  user_service.py
backend/src/app/hexagon/use_cases/: model_service.py  poem_service.py  user_service.py
backend/src/app/infrastructure/: config.py
backend/src/app/infrastructure/auth/: auth_service.py  auth_token_pair.py  oauth_bearer_cookie.py  oauth_bearer_token.py  refresh_session_store.py
backend/src/app/infrastructure/db/: session.py
backend/src/app/infrastructure/db/models/: __init__.py  poem.py  refresh_session.py  user.py
backend/src/app/infrastructure/repositories/: poem_repository.py  user_repository.py
backend/src/app/infrastructure/security/: hasher.py  token_service.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: LoginPage.jsx  MainPage.jsx  PoemPage.jsx  PoetryPage.jsx  RegisterPage.jsx
frontend/src/services/: auth.service.js  generation.service.js  (+3 more)
model/: pyproject.toml
model/mining/poetry/scraping/: items.py  middlewares.py
model/mining/poetry/scraping/spiders/: poetry_spider.py
model/scraping/scraping/spiders/: poetry_spider.py
model/src/: languages.py  main.py  poetry_masked_template_factory.py  poetry_model.py  poetry_model_factory.py  related_words_extractor.py  rhyme_pairs_provider.py  rhyme_service.py  rhyming_scheme.py  tokenizer_helper.py  utils.py
(+16 files in other folders)
