[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DenisioMytnysiano <den.mytnyk@ua.fm>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
SQLAlchemy = "^2.0.10"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
SQLAlchemy-Utils = "^0.41.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
