[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["DenisioMytnysiano <den.mytnyk@ua.fm>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.8.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
