[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["DenisioMytnysiano <den.mytnyk@ua.fm>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Scrapy = "^2.8.0"
beautifulsoup4 = "^4.12.2"
torch = "^2.0.1"
transformers = "^4.28.1"
pronouncing = "^0.2.0"
openai = "^0.27.7"
requests = "^2.31.0"
nltk = "^3.8.1"
sklearn = "^0.0.post5"
gensim = "3.8.3"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
